 - make Smarty::_read_file() work on latest php (messju)
 - fixed improper tokenization of certain inline math expressions (boots)

Version 2.6.11 (Dec 14, 2005)
-----------------------------

 - fixed code generation of non-cacheable blocks to play well with php's
   "Alternative syntax for control structures" (kihara, messju)
 - fix handling of multiple identical inserts in one display()-call (messju)
 - replace {} string access with equivalent substr() to avoid E_STRICT
   warnings in PHP 5.1 (boots)
 - return valid reference in get_config_vars() when given var is
   non-existant (Thomas Schulz, boots)
 - plugin html_image: fix incorrect secure_dir error when
   file doesn't exist (monte)
 - plugin html_image: add path_prefix param (monte)
 - add char_set parameter to escape modifier (Loading, monte)
 - fix notice in debug security check (Drakla, monte)
 - return valid reference in get_template_vars() when given var is
   non-existant (monte)
 - add escape type "urlpathinfo" to escape modifier (monte)

Version 2.6.10 (Aug 5, 2005)
----------------------------

  - allow secure_dir to be a filename, not just
    a directory name (monte)
  - set debug.tpl as a secure_dir, not the entire
    SMARTY_DIR (monte)
  - fix proper escaping for literal strings in
    Smarty_Compiler::_parse_var_props() (boots, messju)
  - remove ambiguity for numeric values passed to smarty_make_timestamp()
    (and thus the date_format modifier). numeric values are treated as
    timestamps now. (andreas, messju)
  - add passthru attribute feature to html_select_date (Sedgar,
    monte)
  - add "middle" parameter to truncate (monte)
  - make form input label ids optional (monte)
  - add error message for empty if/elseif statements (eykanal,
    monte)
  - cast selected value to string for comparison in html_radios
    (Exeption, monte)
  - updated html_select_date's year_as_text-feature to be xhtml compliant
    (Mark West, messju)